# raytracing

./: CMakeLists.txt  Makefile  Math.cpp  Math.hpp  Primitives.cpp  Primitives.hpp  Raytracing.cpp  Raytracing.hpp  Render.cpp  Render.hpp  Screen.cpp  Screen.hpp  Texture.cpp  Texture.hpp  main.cpp  test.cpp
